Covered everything with Java Doc and prepared different documentations such as HTML documentation for whole project based on Java Doc, Spring REST API documentation, UML diagram, DB model diagram